--- a/.github/workflow/main.yaml
+++ b/.github/workflow/main.yaml
@@ -14,6 +14,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+      - name: download artifacts
+        run: ./getArtifact.sh
       - name: login to ECR repo
         uses: aws-actions/amazon-ecr-login@v1
         id: login-ecr
