--- a/.github/workflow/main.yaml
+++ b/.github/workflow/main.yaml
@@ -1,7 +1,7 @@
 name: Build and Deploy to ECR
 on:
   push:
-    branches: [ test ]
+    branches: [ develop ]
 jobs:
   build-and-push-ecr:
     runs-on: ubuntu-latest
