--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,13 @@
 name: Build and Deploy to ECR
 on:
   push:
-    branches: [ "test" ]
+    branches: [ "develop" ]
 jobs:
   build-and-push-ecr:
     runs-on: ubuntu-latest
     environment: development
+    env:
+      ARKCASE_VERSION: 2021.03-RC11
     steps:
       - uses: actions/checkout@v2
       - name: configure aws credentials
@@ -25,12 +27,12 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: arkcase_core
-          IMAGE_TAG: test
           TOMCAT_VERSION: 9.0.50 
           TOMCAT_MAJOR_VERSION: 9
           SYMMETRIC_KEY: 99999999
           MARIADB_CONNECTOR_VERSION: 2.2.5
           RESOURCE_PATH: artifacts
         run: |
-          docker build -t  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg TOMCAT_VERSION --build-arg  TOMCAT_MAJOR_VERSION --build-arg  SYMMETRIC_KEY --build-arg MARIADB_CONNECTOR_VERSION --build-arg RESOURCE_PATH .
+          docker build -t  $ECR_REGISTRY/$ECR_REPOSITORY:$ARKCASE_VERSION --build-arg TOMCAT_VERSION --build-arg  TOMCAT_MAJOR_VERSION --build-arg  SYMMETRIC_KEY --build-arg MARIADB_CONNECTOR_VERSION --build-arg RESOURCE_PATH .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$ARKCASE_VERSION
           
